updated excel sheet link

--- a/lec/lec02/demand-curve.ipynb
+++ b/lec/lec02/demand-curve.ipynb
@@ -88,7 +88,7 @@
     "creds = ServiceAccountCredentials.from_json_keyfile_dict(json.loads(os.environ['GOOGLE_SHEETS_READONLY_KEY']), scope)\n",
     "gc = gspread.authorize(creds)\n",
     "\n",
-    "url = 'https://docs.google.com/spreadsheets/d/1Qjb5_meC0gEEUCbyc77yKeSBxOL0xz9OTSrG8M7y-BI/edit?usp=sharing'\n",
+    "url = 'https://docs.google.com/spreadsheets/d/16iLCfbeLQRG_GiEM5Tc0t4VYxsl9-pTIm-Kx4LaZxGI/edit?usp=sharing'\n",
     "\n",
     "sheet = gc.open_by_url(url)\n",
     "ws = sheet.worksheet('Form Responses 1')\n",
@@ -601,7 +601,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
