made a few more updates

--- a/lec/lec04/Demand_Survey_Surplus.ipynb
+++ b/lec/lec04/Demand_Survey_Surplus.ipynb
@@ -292,7 +292,6 @@
     "demand = burr_slope * Q + burr_intercept\n",
     "supply = 10\n",
     "Q_Star=solve(demand,supply)\n",
-    "#Q_star = solve(demand, supply) # our version of solve is simplified for single solution systems\n",
     "Q_Star"
    ]
   },
@@ -308,14 +307,12 @@
     "plt.title('Demand for Burrito')\n",
     "plt.plot(np.arange(0,82,0.01), burr_slope * np.arange(0,82,0.01) + burr_intercept)\n",
     "plt.hlines(10,0,45, color ='r')\n",
-    "#plt.hlines(y = 1, xmin = 0, xmax = 82, color ='r')\n",
     "\n",
-    "#model_q= burr_slope *1 + burr_intercept)\n",
-    "triangle1 = patches.Polygon([[0,10],[Q_Star,10],[0,17.15]],True,color=\"green\")\n",
+    "triangle1 = patches.Polygon([[0,10],[Q_Star,10],[0,burr_intercept]],True,color=\"green\")\n",
     "currentAxis = plt.gca()\n",
     "currentAxis.add_patch(triangle1)\n",
     "\n",
-    "print(\"Consumer surplus is equal to green triangle: \"+str(0.5*(17.15-10)*45))\n"
+    "print(\"Consumer surplus is equal to green triangle: \"+str(0.5*(burr_intercept-10)*45))\n"
    ]
   },
   {
@@ -372,10 +369,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tix_slope = slope(DemandGreekTix[\"Qdemand\"], DemandGreekTix[\"priceTix\"])\n",
+    "tix_intercept = intercept(DemandGreekTix[\"Qdemand\"], DemandGreekTix[\"priceTix\"])\n",
+    "tix_slope, tix_intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many people does the Model think would buy at $100\n",
+    "solve = lambda x,y: sympy.solve(x-y)[0] if len(sympy.solve(x-y))==1 else \"Not Single Solution\"\n",
+    "Q = sympy.Symbol(\"Q\")\n",
+    "demand = tix_slope * Q + tix_intercept\n",
+    "supply = 100\n",
+    "Q_Star=solve(demand,supply)\n",
+    "Q_Star"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DemandGreekTix.plot(\"Qdemand\", \"priceTix\")\n",
     "plt.xlabel('Quantity')\n",
     "plt.ylabel('Price')\n",
-    "plt.title('Demand for Greek Theater Tickets');"
+    "plt.title('Demand for Greek Theater Tickets');\n",
+    "\n",
+    "plt.plot(np.arange(0,82,0.01), tix_slope * np.arange(0,82,0.01) + tix_intercept)\n",
+    "plt.hlines(100,0,48, color ='r')\n",
+    "\n",
+    "triangle1 = patches.Polygon([[0,100],[Q_Star,100],[0,tix_intercept]],True,color=\"green\")\n",
+    "currentAxis = plt.gca()\n",
+    "currentAxis.add_patch(triangle1)\n",
+    "\n",
+    "print(\"Consumer surplus is equal to green triangle: \"+str(0.5*(tix_intercept-10)*48))\n",
+    "\n",
+    "\n"
    ]
   },
   {
