added lab 4 and proj 2

--- a/lab/lab04/lab04.ipynb
+++ b/lab/lab04/lab04.ipynb
@@ -22,7 +22,7 @@
     "    <tr style=\"background-color: transparent;\"><td>\n",
     "        <img src=\"https://data-88e.github.io/assets/images/blue_text.png\" width=\"250px\" style=\"margin-left: 0;\" />\n",
     "    </td><td>\n",
-    "        <p style=\"text-align: right; font-size: 10pt;\"><strong>Economic Models</strong>, Spring 202<br>\n",
+    "        <p style=\"text-align: right; font-size: 10pt;\"><strong>Economic Models</strong>, Spring 2022<br>\n",
     "            Dr. Eric Van Dusen <br>\n",
     "            Notebook by: Umar Maniku </p></td></tr>\n",
     "</table>"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
     "\n",
     "If you right-click on the Jupyter logo on the top left of the notebook and select \"Open Link in New Tab\", this will send you to the Jupyter file structure on DataHub. This is very similar to the file structure on your own computer. Your current location is at the root of this file structure tree. Go ahead and explore - many of the materials from your other classes that use Jupyter notebooks can be seen. Just be careful not to delete or rename files. \n",
     "\n",
-    "Let's try to navigate to the folder where this notebook is located: `88e-fa21 > lab > lab04`."
+    "Let's try to navigate to the folder where this notebook is located: `sp22-student > lab > lab04`."
    ]
   },
   {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
