--- a/lab/lab08/lab08.ipynb
+++ b/lab/lab08/lab08.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"SS.png\"  />"
+    "<img src=\"ss.png\"  />"
    ]
   },
   {
