--- a/lab/lab10/lab10.ipynb
+++ b/lab/lab10/lab10.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {
     "cell_id": "00000-45c93090-e487-4ff0-bb52-350d099bea59",
     "deepnote_cell_type": "code",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,34 +445,25 @@
     "editable": false
    },
    "source": [
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
     "**Question 3.2**: We now have to *join* the two datasets. This should be familiar from Data 8, but if you need a quick refresher, feel free to reference over [section 8.4 in the Data 8 textbook](https://inferentialthinking.com/chapters/08/4/Joining_Tables_by_Columns.html). Each row in our `phillips_curve_table` should report the unemployment rate and CPI for the same date, if `unemployment_table` and `inflation_table` both have data at that date.\n",
     "\n",
     "<!--\n",
     "BEGIN QUESTION\n",
     "name: q3_2\n",
+    "manual: true\n",
     "-->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phillips_curve_table = unemployment_table.join(..., ...)\n",
+    "phillips_curve_table = ...\n",
     "phillips_curve_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check(\"q3_2\")"
    ]
   },
   {
@@ -482,6 +473,8 @@
     "editable": false
    },
    "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
     "<!-- BEGIN QUESTION -->\n",
     "\n",
     "**Question 3.3**: Graph the Phillips curve, showing the relationship between the unemployment rate and inflation.\n",
@@ -495,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,6 +506,8 @@
    "source": [
     "<!-- END QUESTION -->\n",
     "\n",
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
     "**Question 3.4**: Let's add a \"decade\" column to the table so we can color the points based on what decade they fell in. To do this, write a function (named `find_year_for_date`) that returns the decade of a given date, and then apply it to the `index` column on the `phillips_curve_table`. If you need a refresher on the `apply` function, consult [the Data 8 textbook](https://inferentialthinking.com/chapters/08/1/Applying_a_Function_to_a_Column.html).\n",
     "\n",
     "*Hint: you can get the year of the `date` parameter with `date.year`.*\n",
@@ -520,50 +515,42 @@
     "<!--\n",
     "BEGIN QUESTION\n",
     "name: q3_4\n",
-    "points: \n",
-    "    - 0.25\n",
-    "    - 0.75\n",
-    "    - 1.00\n",
+    "manual: true\n",
     "-->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_year_for_date(date):\n",
-    "    return round(..., ...)\n",
+    "    the_year = ...\n",
+    "    nearest_decade = ...\n",
+    "    return nearest_decade\n",
     "\n",
     "phillips_curve_table = phillips_curve_table.with_columns(\n",
+    "    'decade', \n",
+    "    ...\n",
     ")\n",
-    "\"decade\", phillips_curve_table.apply(..., ...)\n",
     "phillips_curve_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "grader.check(\"q3_4\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "\n",
+    "\n",
     "The code for the graph below is beyond the scope of this course. You don't need to understand it but feel free to find the documentation for the seaborn package if you're interested."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
